--- a/css/common.css
+++ b/css/common.css
@@ -3,6 +3,7 @@
     padding: 0;
 }
 
+/* 
 li {
     list-style: none;
 }
@@ -21,4 +22,4 @@ em {
 img,
 video {
     vertical-align: middle;
-}
+} */
