--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body {
     max-width: 1470px;
     padding: 0 1.5em;
     margin: 0 auto;
-    background-color: rgba(255, 0, 0, 0.2);
+    /* background-color: rgba(255, 0, 0, 0.2); */
     /* 메뉴의 포지션들 */
     position: relative;
     /* overflow: hidden; */
@@ -155,6 +155,10 @@ section {
     /* text-decoration: underline; */
     font-size: 14px;
     font-weight: 600;
+    /* border-bottom: 2px solid; */
+}
+
+.more-btn>a {
     border-bottom: 2px solid;
 }
 
@@ -249,6 +253,7 @@ section {
 footer {
     background: #454a56;
     color: #fff;
+    padding: 30px 0;
 }
 
 footer .inner {
@@ -370,8 +375,11 @@ footer h3 {
         background: #fff;
         width: 280px;
         top: 0;
+        left: -100%;
         height: 100vh;
         z-index: 1000;
+        font-size: 14px;
+        color: var(--linkText);
     }
 
     .mobile-menu-wrap .close-btn {
@@ -396,7 +404,38 @@ footer h3 {
         transform: rotate(-45deg);
     }
 
-    .mobile-menu-list .sub-wrap {}
+    .mobile-menu-list {
+        padding: 24px 20px;
+        border-bottom: 1px sol #ededed;
+        line-height: 2.2;
+    }
+
+    .mobile-menu-list .sub-wrap {
+        text-indent: 20px;
+        display: none;
+    }
+
+    .mobile-menu-list>.sub-has>a {
+        display: block;
+        background: url(../images/nav-arrow-down.svg) no-repeat 95% center;
+    }
+
+    .mobile-menu-list>.sub-has>a.active {
+        background-image: url(../images/nav-arrow-up.svg);
+    }
+
+    .mobile-sns-wrap {
+        padding: 24px 20px;
+    }
+
+    .mobile-sns-wrap .sns-list {
+        margin-top: 20px;
+    }
+
+    .mobile-sns-wrap .sns-list>li>a {
+        border: 1px solid var(--mainColor);
+    }
+
 }
 
 @media screen and (max-width:768px) {
@@ -431,8 +470,21 @@ footer h3 {
 }
 
 @media screen and (max-width:480px) {
+    .main-slider-list>li {
+        flex: 0 0 100%;
+    }
+
     .promotion-list>li {
         flex: 0 0 100%;
+    }
+
+    .pb-story-list>li .text-box p {
+        display: none;
+    }
+
+    .more-btn {
+        position: static;
+        text-align: center;
     }
 
     footer .inner {
